--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="fav.ico" type="image/x-icon">
+  <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicon/apple.png">
+  <link rel="manifest" href="manifest.webmanifest">
   <title>HTML Academy: Кэт энерджи</title>
 </head>
 
@@ -12,7 +16,11 @@
   <header class="main-header container main-container">
     <div class="main-header__wrapper">
       <a class="main-header__logo" href="#">
-        <img class="main-header__logo-image" src="img/logo-mobile.png" alt="Логотип" width="33" height="37">
+        <picture>
+          <source media="(min-width: 1440px)" srcset="img/logo-desktop.png" width="202" height="59">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.png" width="174" height="51">
+          <img class="main-header__logo-image" src="img/logo-mobile.png" alt="Логотип" width="33" height="37">
+        </picture>
         <img class="main-header__logo-text" src="img/logo text.png" alt="Логотип название" width="101" height="18">
       </a>
     </div>
@@ -45,14 +53,17 @@
     <div class="promo__background"></div>
 
     <section class="promo">
-      <div class="promo__background"></div>
       <div class="promo__wrapper container">
         <div class="promo__background-mobile"></div>
         <div class="promo__text">
           <h2 class="promo__title">Функциональное питание для котов</h2>
           <p class="promo__slogan">Занялся собой? займись котом!</p>
         </div>
-        <img class="promo__production" src="img/index/production.png" alt="Пример продукции" width="280" height="270">
+        <picture>
+          <source media="(min-width: 1440px)" srcset="img/index/production-desctop.png 1x, img/index/production-desctop@2x.png 2x," width="552" height="499">
+          <source media="(min-width: 768px)" srcset="img/index/production.png 1x, img/index/production@2x.png 2x" width="709" height="609">
+          <img class="promo__production" src="img/index/production-mobile.png" srcset="img/index/production-mobile@2x.png 2x" alt="Пример продукции" width="280" height="270">
+        </picture>
         <button class="promo__button"> <span class="promo__button-text"> Подобрать программу</span></button>
       </div>
     </section>
@@ -62,7 +73,11 @@
         <h2 class="visually-hidden">Типы программы</h2>
         <ul class="type-program__list">
           <li class="type-program__item">
-            <img class="type-program__image" src="img/index/weight_loss.png" alt="Похудение" width="50" height="53">
+            <picture>
+              <source media="(min-width: 1440px)" srcset="img/index/weight_loss-desctop.png 1x, img/index/weight_loss-desctop@2x.png 2x," width="100" height="106">
+              <source media="(min-width: 768px)" srcset="img/index/weight_loss.png 1x, img/index/weight_loss@2x.png 2x" width="200" height="211">
+              <img class="type-program__image" src="img/index/weight_loss-mobile.png" srcset="img/index/weight_loss-mobile@2x.png 2x" alt="Похудение" width="50" height="53">
+            </picture>
             <div class="type-program__info">
               <h3 class="type-program__title">Похудение</h3>
               <p class="type-program__description">Ваш кот весит больше собаки и почти утратил способность лазить по
@@ -73,8 +88,11 @@
             </div>
           </li>
           <li class="type-program__item">
-            <img class="type-program__image-weight_gain" src="img/index/weight_gain.png" alt="Похудение" width="67"
-              height="50">
+            <picture>
+              <source media="(min-width: 1440px)" srcset="img/index/weight_gain-desctop.png 1x, img/index/weight_gain-desctop@2x.png 2x," width="134" height="100">
+              <source media="(min-width: 768px)" srcset="img/index/weight_gain.png 1x, img/index/weight_gain@2x.png 2x" width="268" height="200">
+              <img class="type-program__image-weight_gain" src="img/index/weight_gain-mobile.png" srcset="img/index/weight_gain-mobile@2x.png 2x" alt="Похудение" width="67" height="50">
+            </picture>
             <div class="type-program__info">
               <h3 class="type-program__title">Набор массы</h3>
               <p class="type-program__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat
@@ -93,14 +111,14 @@
         <h2 class="how-it-works__title">Как это работает</h2>
         <ul class="how-it-works__list">
           <li class="how-it-works__item">
-            <img class="how-it-works__image" src="img/index/benefit.png" alt="Полезные вещества" width="60" height="60">
+            <img class="how-it-works__image" src="img/index/benefit.png" srcset="img/index/benefit@2x.png 2x" alt="Полезные вещества" width="60" height="60">
             <p class="how-it-works__description">Функциональное питание
               содержит только полезные
               питательные вещества.</p>
             <p class="how-it-works__number">1</p>
           </li>
           <li class="how-it-works__item">
-            <img class="how-it-works__image" src="img/index/convenience.png" alt="Удобное использование" width="60"
+            <img class="how-it-works__image" src="img/index/convenience.png" srcset="img/index/convenience@2x.png 2x" alt="Удобное использование" width="60"
               height="60">
             <p class="how-it-works__description">Выпускается в виде порошка,
               который нужно лишь залить
@@ -108,14 +126,14 @@
             <p class="how-it-works__number">2</p>
           </li>
           <li class="how-it-works__item">
-            <img class="how-it-works__image" src="img/index/replacement.png" alt="Вилка, ложка" width="60" height="60">
+            <img class="how-it-works__image" src="img/index/replacement.png" srcset="img/index/replacement@2x.png 2x" alt="Вилка, ложка" width="60" height="60">
             <p class="how-it-works__description">Замените один-два приема
               обычной еды на наше
               функциональное питание.</p>
             <p class="how-it-works__number">3</p>
           </li>
           <li class="how-it-works__item">
-            <img class="how-it-works__image" src="img/index/result.png" alt="Быстрый результат" width="60" height="60">
+            <img class="how-it-works__image" src="img/index/result.png" srcset="img/index/result@2x.png 2x" alt="Быстрый результат" width="60" height="60">
             <p class="how-it-works__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
             <p class="how-it-works__number">4</p>
           </li>
